--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>vynUI</title>
 </head>
 <body>
+    <div class="mainmiddle">
+
+    <div class="greeting">
+     <h2>vynUI</h2>
+    </div>
     
+     <input type="text" placeholder="Ask a question" class="ollamauserinput"></input>
+     <button class="entericon"><img src="Images/entericon.png"></button>
+
+    </div>
+
 </body>
 </html>
