css and html update

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">#
+    <link rel="stylesheet" href="index.css"/>
     <title>vynUI</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
      <h2>vynUI</h2>
     </div>
     
-     <input type="text" placeholder="Ask a question" class="ollamauserinput"></input>
+     <input type="text" placeholder="Ask a question..." class="ollamauserinput"></input>
      <button class="entericon"><img src="Images/entericon.png"></button>
 
     </div>
