backend(data collection files) and frontend(css and html) update

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -16,6 +16,12 @@
      <input type="text" placeholder="Ask a question..." class="ollamauserinput"></input>
 
     </div>
+    <div class="modelselector">
+        <button onclick="pickModel()" class="modeldropbtn">Model</button>
+
+        </div>
+
+    </div>
 
 </body>
 </html>
