major backend and frontend update

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -16,10 +16,23 @@
      <input type="text" placeholder="Ask a question..." class="ollamauserinput"></input>
 
     </div>
-    <div class="modelselector">
-        <button onclick="pickModel()" class="modeldropbtn">Model</button>
+     <div class="blocks">
+        <div class="block1">
 
         </div>
+
+        <div class="block2">
+
+        </div>
+
+        <div class="block3">
+           <button class="block3button">
+            <h3 class="block3text">View Usage</h3>
+           </button>
+        </div>
+
+    </div>
+
 
     </div>
 
